--- a/AOC2024.csproj
+++ b/AOC2024.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Problem7\Problem 7B.cs" />
     <Compile Include="Problem8\Part 1.cs" />
     <Compile Include="Problem8\Part 2.cs" />
+    <Compile Include="Problem9\Part 1.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tools\Tools.cs" />
@@ -57,6 +58,7 @@
   <ItemGroup>
     <Content Include="Problem7\Input.txt" />
     <Content Include="Problem8\Input.txt" />
+    <Content Include="Problem9\Input.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
