--- a/AOC2024.csproj
+++ b/AOC2024.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Problem8\Part 1.cs" />
     <Compile Include="Problem8\Part 2.cs" />
     <Compile Include="Problem9\Part 1.cs" />
+    <Compile Include="Problem9\Part 2.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tools\Tools.cs" />
