Completed problem 10 part 2

--- a/AOC2024.csproj
+++ b/AOC2024.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Problem10\Part 1.cs" />
+    <Compile Include="Problem10\Part 2.cs" />
     <Compile Include="Problem7\Problem 7.cs" />
     <Compile Include="Problem7\Problem 7B.cs" />
     <Compile Include="Problem8\Part 1.cs" />
