--- a/AOC2024.csproj
+++ b/AOC2024.csproj
@@ -32,6 +32,26 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
+    <DebugSymbols>true</DebugSymbols>
+    <OutputPath>bin\x64\Debug\</OutputPath>
+    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <DebugType>full</DebugType>
+    <PlatformTarget>x64</PlatformTarget>
+    <LangVersion>7.3</LangVersion>
+    <ErrorReport>prompt</ErrorReport>
+    <Prefer32Bit>true</Prefer32Bit>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">
+    <OutputPath>bin\x64\Release\</OutputPath>
+    <DefineConstants>TRACE</DefineConstants>
+    <Optimize>true</Optimize>
+    <DebugType>pdbonly</DebugType>
+    <PlatformTarget>x64</PlatformTarget>
+    <LangVersion>7.3</LangVersion>
+    <ErrorReport>prompt</ErrorReport>
+    <Prefer32Bit>true</Prefer32Bit>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -45,6 +65,8 @@
   <ItemGroup>
     <Compile Include="Problem10\Part 1.cs" />
     <Compile Include="Problem10\Part 2.cs" />
+    <Compile Include="Problem11\Part 1.cs" />
+    <Compile Include="Problem11\Part 2.cs" />
     <Compile Include="Problem7\Problem 7.cs" />
     <Compile Include="Problem7\Problem 7B.cs" />
     <Compile Include="Problem8\Part 1.cs" />
@@ -60,6 +82,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Problem10\Input.txt" />
+    <Content Include="Problem11\Input.txt" />
     <Content Include="Problem7\Input.txt" />
     <Content Include="Problem8\Input.txt" />
     <Content Include="Problem9\Input.txt" />
